# InventOps

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  baseline.py  docker-compose.yml  evaluate.py  inference.py  main.py  openenv.yaml  pre_validate.sh  pyproject.toml  requirements.txt  run_tests.sh  server.py
InventOps/: __init__.py  demand.py  env.py  models.py  reward.py  simulator.py
InventOps/data/: demand_profiles.json
InventOps/tasks/: base.py  task_easy.py  task_hard.py  task_medium.py
dashboard/: app.py  queries.py
metrics/: __init__.py  inventops.db  logger.py
rlvr/: agent.py  prompt_optimizer.py
rlvr/prompts/: base_prompt.txt
server/: app.py
tests/: action_validation.py  demand.py  env_interface.py  grader.py  inference_test.py  reward.py
