[project]
name = "inventops"
version = "0.1.0"
description = "OpenEnv-compliant supply chain RL environment with 3 graded tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
    "numpy>=1.26,<3.0",
    "groq>=0.9,<1.0",
    "pytest>=9.0.3",
    "openai>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["InventOps*", "rlvr*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
