[project]
name = "inventops"
version = "0.1.0"
description = "OpenEnv-compliant supply chain RL environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "openai>=1.30",
    "groq>=0.9",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["InventOps*", "rlvr*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
